--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
     <section class="container-fluid p-5 bg-dark">
       <div class="row">
         <div class="col-md-10 col-lg-8 mx-auto text-white">
-         <form action="">
+         <form class = "rss-form" action="">
             <div class="form-row">
               <div class="col">
-                <input type="text" name="url" aria-label="url" class="form-control form-control-lg w-100" placeholder="ссылка RSS">
+                <input autofocus required name="url" aria-label="url" class="form-control form-control-lg w-100" placeholder="rss link">
               </div>
               <div class="col-auto">
                 <button type="submit" aria-label="add" class="btn btn-lg btn-primary px-sm-5">Add</button>
               </div>
             </div>
+            <div class="feedback"></div>
           </form>
         </div>
       </div>
