--- a/index.html
+++ b/index.html
@@ -6,6 +6,23 @@
   <title>RSS aggregator</title>
 </head>
 <body class="d-flex flex-column min-vh-100">
+  <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="modal" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title"></h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">x</span>
+          </button>
+        </div>
+        <div class="modal-body"></div>
+        <div class="modal-footer">
+          <a href="#" class="btn btn-primary full-article" role="button" target="_blank" rel="noopener noreferer">Read the full article</a>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
   <main class="flex-grow-1">
     <section class="container-fluid p-5 bg-dark">
       <div class="row">
