added ui elements

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     <section class="container-fluid p-5 bg-dark">
       <div class="row">
         <div class="col-md-10 col-lg-8 mx-auto text-white">
+          <h1 class="display-3">RSS агрегатор</h1>
+          <p class="lead">Начните читать RSS сегодня! Это легко, это красиво.</p>
          <form class = "rss-form" action="">
             <div class="form-row">
               <div class="col">
@@ -36,8 +38,9 @@
                 <button type="submit" aria-label="add" class="btn btn-lg btn-primary px-sm-5">Add</button>
               </div>
             </div>
-            <div class="feedback"></div>
           </form>
+          <p class="text-muted my-1">Пример: https://ru.hexlet.io/lessons.rss</p>
+          <div class="feedback"></div>
         </div>
       </div>
     </section>
