--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         </div>
         <div class="modal-body"></div>
         <div class="modal-footer">
-          <a href="#" class="btn btn-primary full-article" role="button" target="_blank" rel="noopener noreferer">Read the full article</a>
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <a href="#" class="btn btn-primary full-article" role="button" target="_blank" rel="noopener noreferer">Читать полностью</a>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
         </div>
       </div>
     </div>
