--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <input autofocus name="url" aria-label="url" class="form-control form-control-lg w-100" placeholder="rss link">
               </div>
               <div class="col-auto">
-                <button type="submit" aria-label="add" class="btn btn-lg btn-primary px-sm-5">Add</button>
+                <button type="submit" aria-label="add" class="btn btn-lg btn-primary px-sm-5">Добавить</button>
               </div>
             </div>
           </form>
