--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
          <form class = "rss-form" action="">
             <div class="form-row">
               <div class="col">
-                <input autofocus name="url" aria-label="url" class="form-control form-control-lg w-100" placeholder="rss link">
+                <input autofocus name="url" aria-label="url" class="form-control form-control-lg w-100" placeholder="ссылка RSS">
               </div>
               <div class="col-auto">
                 <button type="submit" aria-label="add" class="btn btn-lg btn-primary px-sm-5">Добавить</button>
